compiler/test/conformance/testdata/errors/05_mix_conflict.yz
Named: {
    name: "default"
}

Host: {
    mix Named
    name: "override"
}

main: {
}
